Added Junit 5 Jupiter Testing, Mockito and added fields(email & sentimentanalysis)